--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,18 +1,6 @@
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" 
-    aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>Michael Stramel's Angular Demo</span>
-  <span class="flex-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" 
-    aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" 
-    aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
-  </button>
+  <span>Michael Stramel's Portfolio</span>
+  <span class="flex-auto"></span>
   <mat-slide-toggle 
     [checked]="themeSvc.colorSchemeSignal() === 'dark'"
     (change)="$event.checked ? themeSvc.setToDarkMode() : themeSvc.setToLightMode()">
