--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -1,4 +1,7 @@
 @use '@angular/material' as mat;
+@tailwind base;
+@tailwind components;
+@tailwind utilities; 
 
 html {
   color-scheme: light dark;
@@ -7,9 +10,4 @@ html {
     typography: monospace,
     density: -1
   ));
-}
-
-// DSL Utility Classes
-.flex-spacer {
-  flex: 1 1 auto;
 }
