--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -5,9 +5,21 @@
 
 html {
   color-scheme: light dark;
+  max-width: 100%;
   @include mat.theme((
     color: mat.$azure-palette,
     typography: monospace,
     density: -1
   ));
+}
+
+
+@layer base {
+  mat-card-title {
+    @apply p-4;
+  }
+  mat-card-content p {
+    @apply mb-2 mt-4
+  }
+ 
 }
